# libxdg

./: Makefile.am  configure.ac  libxdg.pc.in
src/: Makefile.am  main.cxx  xdg-desktop-file.cxx  xdg-desktop-file.hxx  xdg-icon-theme.cxx  xdg-icon-theme.hxx  xdg-utils.hxx
